kubernetes_config/postgres.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
          - containerPort: 5432
            name: postgres
        volumeMounts:
          - name: postgres-persistent-storage
            mountPath: /usr/local/var/postgres
      volumes:
        - name: postgres-persistent-storage
          gcePersistentDisk:
            pdName: pg-data
            fsType: ext4
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
