kubernetes_config/solidus.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: solidus
  name: solidus
  selfLink: /apis/extensions/v1beta1/namespaces//deployments/solidus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solidus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 3
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: solidus
    spec:
      containers:
      - image: $IMAGE_NAME
        imagePullPolicy: IfNotPresent
        name: solidus
        ports:
          - name: solidus
            containerPort: 3000
        resources:
          limits:
            memory: "500Mi"
            cpu: "1"
          requests:
            memory: "50Mi"
            cpu: "100m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: solidus
spec:
  selector:
    app: solidus
  ports:
    - protocol: TCP
      name: solidus
      port: 3000
      targetPort: solidus
  type: LoadBalancer
