kubernetes_config/traefik.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-load-balancer
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: traefik-ingress-load-balancer
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-load-balancer
        name: traefik-ingress-load-balancer
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-load-balancer
        args:
        - --web
        - --kubernetes
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-load-balancer
  ports:
    - protocol: TCP
      port: 80
      name: web
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-admin
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-load-balancer
  ports:
    - name: traefik-admin
      port: 80
      targetPort: 8080
  type: ClusterIP
