kubernetes_config/solidus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solidus
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: solidus
          servicePort: solidus
